# go_play

./: concurrency.go  concurrent_map.go  docs.md  flag_usage.csv  flags.go  go.mod  id_filler.go  lis.go  lru.go  play.go  play_test.go  readme.md  scripting.py  status.go  testcase.go  transaction.go  transaction_test.go  transaction_type.go
cmd/: main.go
pyscripts/: datadogresults.json  pyproject.toml  results.txt
pyscripts/pyscripts/: called_sap_but_failed_update.json  called_sap_references.csv  csv_parser.py  json_parser.py  locales.py  output.csv  payments_with_SAP_invoice_status_2024-05-05_to_2025-05-06_without_invoice_row.csv  payments_with_SAP_invoice_status_2024-05-05_to_2025-05-06_without_invoice_row_with_transfer_to_source.csv  payments_with_SAP_invoice_status_2024-05-05_to_2025-05-06_without_invoice_row_with_transfer_to_source_not_sent_to_SAP.csv  transfer_to_source.csv
pyscripts/pyscripts/output/: chunk_10_5000_records.csv  chunk_11_662_records.csv  chunk_1_50_records.csv  chunk_2_1000_records.csv  chunk_3_2000_records.csv  chunk_4_3000_records.csv  chunk_5_4000_records.csv  chunk_6_5000_records.csv  chunk_7_5000_records.csv  chunk_8_5000_records.csv  chunk_9_5000_records.csv
pyscripts/pyscripts/rds_maintenance_windows/: cpu_utilization_values.py  main.py  maintenance_window.py  maintenance_window_test.py  rds_statistics.py  rds_statistics_test.py
pyscripts/pyscripts/translation_keys/: keys_diff.py  parse_translations.py
yaml_diff/: diff.go  diff_test.go
yaml_diff/cmd/: dest.yaml  main.go  src.yaml
