[tool.poetry]
name = "pyscripts"
version = "0.1.0"
description = ""
authors = ["Jansen <jansen.her@foodpanda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.143"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
